--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,11 @@ asgiref==3.4.1
 autopep8==1.5.7
 dj-database-url==0.5.0
 Django==3.2.6
+django-appconf==1.0.5
 django-ckeditor==6.2.0
+django-compressor==3.0
 django-crispy-forms==1.13.0
+django-extensions==3.1.5
 django-filter==21.1
 django-js-asset==1.2.2
 django-taggit==2.0.0
@@ -12,12 +15,14 @@ djangorestframework==3.12.4
 gunicorn==20.1.0
 jsmin==3.0.0
 Pillow==8.4.0
+pkg_resources==0.0.0
 pycodestyle==2.7.0
 python-decouple==3.4
 pytz==2021.1
+rcssmin==1.1.0
+rjsmin==1.2.0
 six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
 typing_extensions==4.0.0
 Unipath==1.1
-whitenoise==5.3.0
