--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
 asgiref==3.4.1
 autopep8==1.5.7
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.9
+cryptography==36.0.1
+defusedxml==0.7.1
 dj-database-url==0.5.0
 Django==3.2.6
+django-allauth==0.47.0
 django-appconf==1.0.5
 django-ckeditor==6.2.0
 django-compressor==3.0
 django-crispy-forms==1.13.0
+django-debug-toolbar==3.2.4
 django-extensions==3.1.5
 django-filter==21.1
 django-js-asset==1.2.2
@@ -13,16 +20,25 @@ django-taggit==2.0.0
 django-tinymce4-lite==1.8.0
 djangorestframework==3.12.4
 gunicorn==20.1.0
+idna==3.3
 jsmin==3.0.0
+oauthlib==3.1.1
 Pillow==8.4.0
 pkg_resources==0.0.0
 pycodestyle==2.7.0
+pycparser==2.21
+PyJWT==2.3.0
 python-decouple==3.4
+python3-openid==3.2.0
 pytz==2021.1
 rcssmin==1.1.0
+requests==2.26.0
+requests-oauthlib==1.3.0
 rjsmin==1.2.0
 six==1.16.0
+social-auth-core==4.1.0
 sqlparse==0.4.2
 toml==0.10.2
 typing_extensions==4.0.0
 Unipath==1.1
+urllib3==1.26.7
